--- a/_publications/IL-10.md
+++ b/_publications/IL-10.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/IL-10_JI
 date: 2021-11-1
 venue: 'The Journal of Immunology'
-citation: 'Rasquinha, M., Sur, M., <b>Lasrado, N.</b>, Reddy, J., 2021. IL-10 as a Th2 Cytokine: Differences Between Mice and Humans. The Journal of Immunology, 2021, 207 (9) 2205-2215.'
+citation: 'Rasquinha, M.* , Sur, M.*, <b>Lasrado, N.</b>*, Reddy, J., 2021. IL-10 as a Th2 Cytokine: Differences Between Mice and Humans. The Journal of Immunology, 2021, 207 (9) 2205-2215. * equal first authors'
 ---
 
 Abstract:
